--- a/TVShows/TVShows/Login/Login.storyboard
+++ b/TVShows/TVShows/Login/Login.storyboard
@@ -22,10 +22,10 @@
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="750"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XZx-Oe-uSb" userLabel="Container View">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="633"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="697"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="34" translatesAutoresizingMaskIntoConstraints="NO" id="kcZ-8g-Vpv" userLabel="Form Stack View">
-                                                <rect key="frame" x="20" y="0.0" width="374" height="633"/>
+                                                <rect key="frame" x="20" y="0.0" width="374" height="697"/>
                                                 <subviews>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0Gp-2O-xMD" userLabel="Top view spacing">
                                                         <rect key="frame" x="0.0" y="0.0" width="374" height="70"/>
@@ -35,10 +35,10 @@
                                                         </constraints>
                                                     </view>
                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="login-logo" translatesAutoresizingMaskIntoConstraints="NO" id="zIt-xX-q1R">
-                                                        <rect key="frame" x="0.0" y="104" width="374" height="16"/>
+                                                        <rect key="frame" x="0.0" y="104" width="374" height="80"/>
                                                     </imageView>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="iDW-1J-pep" userLabel="Username Stack View">
-                                                        <rect key="frame" x="0.0" y="154" width="374" height="41"/>
+                                                        <rect key="frame" x="0.0" y="218" width="374" height="41"/>
                                                         <subviews>
                                                             <textField opaque="NO" contentMode="bottomLeft" contentHorizontalAlignment="left" contentVerticalAlignment="bottom" text="Username" clearsOnBeginEditing="YES" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="zeZ-PF-Mc8">
                                                                 <rect key="frame" x="0.0" y="0.0" width="374" height="40"/>
@@ -47,7 +47,7 @@
                                                                 </constraints>
                                                                 <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                                <textInputTraits key="textInputTraits" keyboardAppearance="light" returnKeyType="continue" textContentType="username"/>
+                                                                <textInputTraits key="textInputTraits" keyboardType="emailAddress" keyboardAppearance="light" returnKeyType="continue" textContentType="username"/>
                                                             </textField>
                                                             <view contentMode="top" translatesAutoresizingMaskIntoConstraints="NO" id="vtS-gz-Utt">
                                                                 <rect key="frame" x="0.0" y="40" width="374" height="1"/>
@@ -63,7 +63,7 @@
                                                         </constraints>
                                                     </stackView>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="v1X-dV-cvA" userLabel="Password Stack View">
-                                                        <rect key="frame" x="0.0" y="229" width="374" height="40"/>
+                                                        <rect key="frame" x="0.0" y="293" width="374" height="40"/>
                                                         <subviews>
                                                             <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kd5-Wj-aKG">
                                                                 <rect key="frame" x="0.0" y="0.0" width="374" height="39"/>
@@ -111,7 +111,7 @@
                                                         </constraints>
                                                     </stackView>
                                                     <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Elj-WW-Y5e" userLabel="Remember me Stack View">
-                                                        <rect key="frame" x="0.0" y="303" width="374" height="24"/>
+                                                        <rect key="frame" x="0.0" y="367" width="374" height="24"/>
                                                         <subviews>
                                                             <button opaque="NO" contentMode="topRight" contentHorizontalAlignment="leading" contentVerticalAlignment="center" adjustsImageSizeForAccessibilityContentSizeCategory="YES" adjustsImageWhenDisabled="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fNK-jh-2J3" userLabel="RememberMe">
                                                                 <rect key="frame" x="0.0" y="0.0" width="30" height="24"/>
@@ -139,7 +139,7 @@
                                                         </constraints>
                                                     </stackView>
                                                     <button opaque="NO" contentMode="scaleToFill" placeholderIntrinsicWidth="374" placeholderIntrinsicHeight="50" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kBB-cb-aTq">
-                                                        <rect key="frame" x="0.0" y="361" width="374" height="55"/>
+                                                        <rect key="frame" x="0.0" y="425" width="374" height="55"/>
                                                         <color key="backgroundColor" red="1" green="0.45882352941176469" blue="0.5490196078431373" alpha="1" colorSpace="calibratedRGB"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="55" id="r4y-RP-uTC"/>
@@ -154,7 +154,7 @@
                                                         </connections>
                                                     </button>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="or" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WCJ-rd-dcJ">
-                                                        <rect key="frame" x="0.0" y="450" width="374" height="20"/>
+                                                        <rect key="frame" x="0.0" y="514" width="374" height="20"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="20" id="Q1s-fH-Evs"/>
                                                         </constraints>
@@ -163,7 +163,7 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d7k-Zw-zca">
-                                                        <rect key="frame" x="0.0" y="504" width="374" height="25"/>
+                                                        <rect key="frame" x="0.0" y="568" width="374" height="25"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="25" id="Esh-0i-pXl"/>
                                                         </constraints>
@@ -174,7 +174,7 @@
                                                         </connections>
                                                     </button>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tPy-nn-9uR" userLabel="Bottom view spacing">
-                                                        <rect key="frame" x="0.0" y="563" width="374" height="70"/>
+                                                        <rect key="frame" x="0.0" y="627" width="374" height="70"/>
                                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="70" id="1kC-W2-TMG"/>
@@ -222,12 +222,17 @@
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <size key="freeformSize" width="414" height="750"/>
                     <connections>
+                        <outlet property="bottomViewSpacing" destination="tPy-nn-9uR" id="W5J-p8-Lhg"/>
+                        <outlet property="containerView" destination="XZx-Oe-uSb" id="qK3-Ch-958"/>
                         <outlet property="createAccountButton" destination="d7k-Zw-zca" id="D7M-UE-Rke"/>
                         <outlet property="loginButton" destination="kBB-cb-aTq" id="qPz-VL-dxo"/>
+                        <outlet property="orLabel" destination="WCJ-rd-dcJ" id="BNd-ek-Fnt"/>
                         <outlet property="passwordTextField" destination="KKC-iV-2KE" id="SeX-qv-19M"/>
                         <outlet property="passwordVisibilityButton" destination="b2j-ip-oNo" id="HjZ-6D-clr"/>
                         <outlet property="rememberMeCheckBox" destination="fNK-jh-2J3" id="nBe-0L-krp"/>
+                        <outlet property="rememberMeLabel" destination="eVY-8j-b8g" id="bOk-q5-MEu"/>
                         <outlet property="scrollView" destination="Vw9-da-8h4" id="rd1-qw-bcT"/>
+                        <outlet property="topViewSpacing" destination="0Gp-2O-xMD" id="n79-IE-W8N"/>
                         <outlet property="usernameTextField" destination="zeZ-PF-Mc8" id="rCZ-Pk-cvY"/>
                     </connections>
                 </viewController>
